--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "31---form-replace",
   "dependencies": {
+    "firebase": "^10.1.0",
     "miragejs": "0.1.46",
     "react": "18.2.0",
     "react-dom": "18.2.0",
